--- a/package.json
+++ b/package.json
@@ -1,21 +1,61 @@
 {
   "name": "insta-gpt",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "index.js",
   "scripts": {
+    "dev": "expo start",
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "axios": "^1.3.5",
     "expo": "~48.0.11",
+    "expo-constants": "~14.2.1",
+    "expo-image": "~1.0.0",
+    "expo-image-picker": "^14.1.1",
+    "expo-linking": "~4.0.1",
+    "expo-router": "^1.5.3",
     "expo-status-bar": "~1.4.4",
+    "openai": "^3.2.1",
     "react": "18.2.0",
-    "react-native": "0.71.6"
+    "react-native": "0.71.6",
+    "react-native-gesture-handler": "^2.9.0",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-view-shot": "3.5.0",
+    "react-native-wind": "^1.2.0",
+    "swr": "^2.1.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.21.4",
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@types/react": "^18.0.35",
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@typescript-eslint/parser": "^5.58.0",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.4",
+    "babel-plugin-transform-remove-console": "^6.9.4",
+    "eslint": "^8.38.0",
+    "eslint-import-resolver-typescript": "^3.5.5",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-tsc": "^2.0.0",
+    "typescript": "^4.9.4"
+  },
+  "resolutions": {
+    "metro": "0.76.0",
+    "metro-resolver": "0.76.0"
+  },
+  "overrides": {
+    "metro": "^0.73.7",
+    "metro-resolver": "^0.73.7"
   },
   "private": true
 }
