--- a/app.json
+++ b/app.json
@@ -11,7 +11,8 @@
     ],
     "icon": "./assets/icon.png",
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.mizumura.instagpt"
     },
     "name": "insta-gpt",
     "orientation": "portrait",
