--- a/app.json
+++ b/app.json
@@ -11,6 +11,7 @@
     ],
     "icon": "./assets/icon.png",
     "ios": {
+      "buildNumber": "2",
       "bundleIdentifier": "com.mizumura.instagpt",
       "supportsTablet": true
     },
