--- a/package.json
+++ b/package.json
@@ -11,38 +11,44 @@
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "1.17.11",
-    "axios": "^1.3.5",
-    "expo": "~48.0.11",
+    "axios": "^1.4.0",
+    "expo": "~48.0.17",
+    "expo-clipboard": "~4.1.2",
     "expo-constants": "~14.2.1",
-    "expo-image": "~1.0.0",
+    "expo-image": "~1.2.3",
     "expo-image-picker": "^14.1.1",
     "expo-linking": "~4.0.1",
+    "expo-media-library": "~15.2.3",
     "expo-router": "^1.5.3",
     "expo-status-bar": "~1.4.4",
     "lodash": "^4.17.21",
+    "metro": "^0.76.0",
+    "metro-resolver": "0.76.4",
+    "moti": "^0.25.3",
     "openai": "^3.2.1",
     "react": "18.2.0",
-    "react-native": "0.71.6",
-    "react-native-gesture-handler": "^2.9.0",
+    "react-native": "0.71.8",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-view-shot": "3.5.0",
     "react-native-wind": "^1.2.0",
-    "swr": "^2.1.3"
+    "swr": "^2.1.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.21.4",
+    "@babel/core": "^7.21.8",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@types/lodash": "^4.14.194",
-    "@types/react": "^18.0.35",
-    "@typescript-eslint/eslint-plugin": "^5.58.0",
-    "@typescript-eslint/parser": "^5.58.0",
+    "@types/react": "~18.0.27",
+    "@typescript-eslint/eslint-plugin": "^5.59.6",
+    "@typescript-eslint/parser": "^5.59.6",
     "babel-plugin-module-resolver": "^5.0.0",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "babel-plugin-transform-remove-console": "^6.9.4",
-    "eslint": "^8.38.0",
+    "eslint": "^8.40.0",
     "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
