--- a/package.json
+++ b/package.json
@@ -11,38 +11,36 @@
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix"
   },
   "dependencies": {
-    "@expo/vector-icons": "^13.0.0",
-    "@react-native-async-storage/async-storage": "1.17.11",
+    "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "axios": "^1.4.0",
-    "expo": "~48.0.17",
-    "expo-clipboard": "~4.1.2",
-    "expo-constants": "~14.2.1",
-    "expo-image": "~1.2.3",
-    "expo-image-picker": "^14.1.1",
-    "expo-linking": "~4.0.1",
-    "expo-media-library": "~15.2.3",
-    "expo-router": "^1.5.3",
-    "expo-status-bar": "~1.4.4",
+    "expo": "^50.0.0",
+    "expo-clipboard": "~5.0.1",
+    "expo-constants": "~15.4.5",
+    "expo-image": "~1.10.6",
+    "expo-image-picker": "~14.7.1",
+    "expo-linking": "~6.2.2",
+    "expo-media-library": "~15.9.1",
+    "expo-router": "~3.4.7",
+    "expo-status-bar": "~1.11.1",
     "lodash": "^4.17.21",
-    "metro": "^0.76.0",
-    "metro-resolver": "0.76.4",
     "moti": "^0.25.3",
     "openai": "^3.2.1",
     "react": "18.2.0",
-    "react-native": "0.71.8",
-    "react-native-gesture-handler": "~2.9.0",
-    "react-native-reanimated": "~2.14.4",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0",
-    "react-native-view-shot": "3.5.0",
+    "react-native": "0.73.4",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-view-shot": "3.8.0",
     "react-native-wind": "^1.2.0",
     "swr": "^2.1.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.21.8",
+    "@babel/core": "^7.20.0",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@types/lodash": "^4.14.194",
-    "@types/react": "~18.0.27",
+    "@types/react": "~18.2.45",
     "@typescript-eslint/eslint-plugin": "^5.59.6",
     "@typescript-eslint/parser": "^5.59.6",
     "babel-plugin-module-resolver": "^5.0.0",
@@ -55,15 +53,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-tsc": "^2.0.0",
-    "typescript": "^4.9.4"
-  },
-  "resolutions": {
-    "metro": "0.76.0",
-    "metro-resolver": "0.76.0"
-  },
-  "overrides": {
-    "metro": "^0.73.7",
-    "metro-resolver": "^0.73.7"
+    "typescript": "^5.3.0"
   },
   "private": true
 }
